--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bitcore-lib": "^10.0.5",
     "bitcore-mnemonic": "^10.0.5",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "node-localstorage": "^2.2.1",
     "qrcode": "^1.5.3"
