--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/kms": "^3.6.0",
     "axios": "^1.4.0",
     "bitcore-lib": "^10.0.5",
     "bitcore-mnemonic": "^10.0.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "google-p12-pem": "^4.0.1",
     "node-localstorage": "^2.2.1",
     "qrcode": "^1.5.3"
   }
