improved wallet security
Streamlined wallet
security via the integration of the bcrypt and crypto libraries for
secure mnemonic encryption and decryption. Aligned the createWallet and createHDWallet endpoints with the new security enhancement. This
modification leads to an overall improvement in wallet's security and
also optimizes response times for API documentation load from server. No
breaking changes or API modifications were introduced.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@google-cloud/kms": "^3.6.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "bitcore-lib": "^10.0.5",
     "bitcore-mnemonic": "^10.0.5",
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "google-p12-pem": "^4.0.1",
